kubernetes/apps/ghost/ingress-ghost.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost
  namespace: ghost
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: themisha.dev
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: ghost
                port:
                  number: 80
